add details to accomodations, travel, and activities page

--- a/accomodations.html
+++ b/accomodations.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title><title>
+    <title>Accomodations<title>
   </head>
   <body>
-    
+    <h2>Lodging Options</h2>
+    <img src="img/hotel.jpg" alt="picture of volcano shaped hotel">
+    <p><strong>The Captain's Quarters</strong> Featuring a 180 degree view of the bay and charming wood panneling, enjoy the king sized bed. From $250. </p>
+    <p><strong>The Honeymoon Suites</strong>Fireworks are guaranteed at the top of volcano hotel. Enjoy! Seasonal pricing. Only one available. </p>
+    <p><strong>Classical Boarding</strong> From $189. </p>
+    <p>Tent/snowshoe rental- inquire at Sven's.</p>
   </body>
 </html>
