--- a/travel.html
+++ b/travel.html
@@ -2,7 +2,16 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title><title>
+    <title>Travel<title>
   </head>
-  <body></body>
+  <body>
+    <h2>Travel Options</h2>
+    <p>Getting here could not be easier. We have a plethora of quick and easy options to get here.</p>
+    <ul>
+      <li>Charter Flight</li>
+      <li>Float Plane</li>
+      <li>Ferry from Reykjavik</li>
+      <li>Reindeer Sled- inquire with Sven!</li>
+    </ul>
+  </body>
 </html>
