add images on pictures

--- a/pictures.html
+++ b/pictures.html
@@ -2,25 +2,25 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title>Gallery<title>
+    <title>Gallery</title>
   </head>
   <body>
     <h2></h2>
     <table>
       <tr>
-        <td><img src="" alt=""></td>
-        <td><img src="" alt=""></td>
-        <td><img src="" alt=""></td>
+        <td><img src="img/viti2.jpg" alt="photo of Viti volcano"></td>
+        <td><img src="img/deer.jpg" alt="picture of reindeer sled"></td>
+        <td><img src="img/jeep.jpg" alt="picture of jeep"></td>
       </tr>
       <tr>
-        <td><img src="" alt=""></td>
-        <td><img src="" alt=""></td>
-        <td><img src="" alt=""></td>
+        <td><img src="img/reyk.jpg" alt="picture of church steeple over Reykjavik"></td>
+        <td><img src="img/NorLgths.jpg" alt="the Aurora Borealis"></td>
+        <td><img src="img/ice.jpg" alt="hallway in an ice cave"></td>
       </tr>
       <tr>
-        <td><img src="" alt=""></td>
-        <td><img src="" alt=""></td>
-        <td><img src="" alt=""></td>
+        <td><img src="img/blue-ice.jpg" alt="man walking on top of glacier"></td>
+        <td><img src="img/volcano-house.jpg" alt="volcano erupting with city in foreground"></td>
+        <td><img src="img/volcano.jpg" alt="volcano erupting"></td>
       </tr>
     </table>
   </body>
