--- a/accomodations.html
+++ b/accomodations.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title>Accomodations<title>
+    <title>Accomodations</title>
   </head>
   <body>
     <h2>Lodging Options</h2>
