--- a/activities.html
+++ b/activities.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title><title>
+    <title></title>
   </head>
   <body>
     <p>Our world class excursions will challenge and delight you. Whether you want to hike a volcano, see the city of Reykjavik, or just relax, everything you do will be completely different. Come and make the wild north your own.</p>
