--- a/travel.html
+++ b/travel.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title>Travel<title>
+    <title>Travel</title>
   </head>
   <body>
     <h2>Travel Options</h2>
