--- a/pictures.html
+++ b/pictures.html
@@ -5,7 +5,7 @@
     <title>Gallery</title>
   </head>
   <body>
-    <h2></h2>
+    <h2>Fun shots from our guests- come add your own!</h2>
     <table>
       <tr>
         <td><img src="img/viti2.jpg" alt="photo of Viti volcano"></td>
