--- a/activities.html
+++ b/activities.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title></title>
+    <title>Activities</title>
   </head>
   <body>
+    <h2>Here is just a taste of the many experiences that await you!</h2>
     <p>Our world class excursions will challenge and delight you. Whether you want to hike a volcano, see the city of Reykjavik, or just relax, everything you do will be completely different. Come and make the wild north your own.</p>
     <ul>
       <li>ATV Motorbike</li>
