--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Icelandic Island Paradise</title>
   </head>
   <body>
-    <p align="center"><img height="300px" width="80%" src="img/viti.jpg" alt="Picture of volcanic resort"></p>
+    <div align="center"><img height="300px" width="80%" src="img/viti.jpg" alt="Picture of volcanic resort"></div>
     <h1>Velkominn to Eldur Fjall!!</h1>
     <p>Does a journey to the edge of the world sound like your idea of paradise? Velkominn to the land of fire and ice. Velkominn to Eldur Fjall. Situated upon an striking island off the coast of Reykjavik amidst a landscape dotted with natural hot springs and geysers fueled by the mighty heat of Viti, a slumbering volcano. Book soon for the summer season!</p>
     <p>Follow the links below to have a look around- then follow your heart to Eldur Fjall!</p>
